# Xandrix_rocket_server

./: .gitignore  LICENSE
p2m_server/: Cargo.toml  Rocket.toml  diesel.toml  test.sqlite  test.sqlite-shm
p2m_server/migrations/2024-09-01-071616_create_users/: up.sql
p2m_server/src/: main.rs  schema.rs
