[package]
name = "p2m_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket-multipart-form-data = "0.10.7"

image = "0.23.14" # 이미지 처리를 위한 라이브러리